# cli

./: Cargo.toml  pirocadefoice
.github/workflows/: build-and-test.yml  publish.yml  release.yml
scripts/: install_ui
src/: main.rs  util.rs
src/commands/: install.rs  mod.rs  version.rs
