[package]
name = "katan-cli"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/KatanPanel/cli/"
readme = "README.md"
license = "Apache-2.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.15", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
tempfile = "3"
