[package]
name = "katan-cli"
description = "Katan standard tooling"
version = "0.1.0-SNAPSHOT"
edition = "2021"
homepage = "https://katan.org/"
repository = "https://github.com/KatanPanel/cli/"
readme = "README.md"
license-file = "LICENSE"
include = [
    "**/*.rs",
    "bin/**",
    "LICENSE",
    "README.md",
    "Cargo.toml",
]

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21.2", features = ["full"] }
filename = "0.1"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
run_script = "*"
indicatif = "0.17.1"
tempfile = "3.3.0"
